
  [ Andres Salomon ]
  * New upstream security release.
    - CVE-2024-12381: Type Confusion in V8.
      Reported by Seunghyun Lee (@0x10n).
    - CVE-2024-12382: Use after free in Translate. Reported by
      lime(@limeSec_) from TIANGONG Team of Legendsec at QI-ANXIN Group.
  * (Temporarily) switch from llvm's libc++ to gcc's libstdc++ to
    simplify the prior clang-16/19 upgrades.

  [ Nathan Teodosio ]
  * Simplify fixes/bindgen.patch so it doesn't need frequent rebasing.

  [ Daniel Richard G. ]
  * d/copyright: Expand list of Files-Excluded: entries.
  * d/rules: Various updates to get-orig-source rule, including use of
    grep-dctrl(1) and the LASTCHANGE.committime timestamp.
  * d/scripts/check-upstream: Avoid issues with inaccurate $(pwd) value and
    spaces in filenames, and print all errors instead of only the first one.

 -- Andres Salomon <dilinger@debian.org>  Wed, 04 Dec 2024 01:55:51 -0500

chromium (131.0.6778.108-1) unstable; urgency=high

  * New upstream security release.
    - CVE-2024-12053: Type Confusion in V8.
      Reported by gal1ium and chluo.

 -- Andres Salomon <dilinger@debian.org>  Wed, 04 Dec 2024 01:55:50 -0500

chromium (131.0.6778.85-1) unstable; urgency=high

  [ Andres Salomon ]
  * New upstream stable release.
    - CVE-2024-11110: Inappropriate implementation in Blink.
      Reported by Vsevolod Kokorin (Slonser) of Solidlab.
    - CVE-2024-11111: Inappropriate implementation in Autofill.
      Reported by Narendra Bhati, Suma Soft Pvt. Ltd - Pune (India).
    - CVE-2024-11112: Use after free in Media. Reported by
      Nan Wang(@eternalsakura13) and Zhenghang Xiao(@Kipreyyy) of
      360 Vulnerability Research Institute.
    - CVE-2024-11113: Use after free in Accessibility.
      Reported by Weipeng Jiang (@Krace) of VRI.
    - CVE-2024-11114: Inappropriate implementation in Views.
      Reported by Micky.
    - CVE-2024-11115: Insufficient policy enforcement in Navigation.
      Reported by mastersplinter.