@@ -19,26 +19,30 @@ fix should probably go upstream.
 
 --- a/third_party/crabbyavif/BUILD.gn
 +++ b/third_party/crabbyavif/BUILD.gn
-@@ -13,5 +13,8 @@
+@@ -9,7 +9,10 @@ rust_bindgen("crabbyavif_dav1d_bindings"
+   header = "src/sys/dav1d-sys/wrapper.h"
+   deps = [ "//third_party/dav1d:dav1d_headers" ]
    configs = [ "//third_party/dav1d:dav1d_config" ]
-   output_name = "dav1d_bindgen"
-+  bindgen_flags = ["no-doc-comments", "generate=functions,types,vars,methods,constructors,destructors",]
 -  bindgen_flags = [
++  bindgen_flags = ["no-doc-comments", "generate=functions,types,vars,methods,constructors,destructors",]
 +  junk = []
 +  not_needed(["junk"])
 +  junk = [
      "no-doc-comments",
      "generate=functions,types,vars,methods,constructors,destructors",
-@@ -37,5 +37,8 @@ rust_bindgen("crabbyavif_dav1d_bindings"
+     "allowlist-item=dav1d_close",
+@@ -45,7 +48,10 @@ rust_static_library("crabbyavif_dav1d_sy
+ rust_bindgen("crabbyavif_libyuv_bindings") {
+   header = "src/sys/libyuv-sys/wrapper.h"
    configs = [ "//third_party/libyuv:libyuv_config" ]
-   output_name = "libyuv_bindgen"
-+  bindgen_flags = ["no-doc-comments", "generate=functions,types,vars,methods,constructors,destructors",]
 -  bindgen_flags = [
++  bindgen_flags = ["no-doc-comments", "generate=functions,types,vars,methods,constructors,destructors",]
 +  junk = []
 +  not_needed(["junk"])
 +  junk = [
      "no-doc-comments",
      "generate=functions,types,vars,methods,constructors,destructors",
+     "allowlist-item=AR30ToAB30",
 --- a/build/rust/rust_bindgen.gni
 +++ b/build/rust/rust_bindgen.gni
 @@ -18,7 +18,7 @@ if (host_os == "win") {
