@@ -8,6 +8,8 @@ chromium (131.0.6778.139-1) UNRELEASED; urgency=high
       lime(@limeSec_) from TIANGONG Team of Legendsec at QI-ANXIN Group.
   * (Temporarily) switch from llvm's libc++ to gcc's libstdc++ to
     simplify the prior clang-16/19 upgrades.
+  * d/patches:
+    - fixes/bindgen.patch: refresh.
 
   [ Nathan Teodosio ]
   * Simplify fixes/bindgen.patch so it doesn't need frequent rebasing.
